# free-bandcamp-downloader

./: .gitignore  README.md  pyproject.toml  setup.py
free_bandcamp_downloader/: __init__.py  __main__.py  bandcamp_http_adapter.py  bc_free_downloader.py  main.py
