[tool.poetry]
name = "free-bandcamp-downloader"
version = "0.4.0"
description = "Download free and name-your-price albums from Bandcamp in lossless quality"
authors = ["7x11x13 <x7x11x13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
bcdl-free = "free_bandcamp_downloader.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
tqdm = "^4.66.1"
pyrfc6266 = "^1.0.2"
mutagen = "^1.47.0"
1secmail = "^1.1.0"
docopt-ng = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
